# nature-platform

./: .gitignore  ARCHITECTURE.md  EXPERIMENTATION.md  README.md  pack_architecture.md  probe_results_combined.md  probe_takeaways.md  probe_v8_analysis.md  probe_v9_cloud_analysis.md  pyproject.toml
nature/: __init__.py  __main__.py  cli.py
nature/agent/: __init__.py  executor.py  llm_agent.py  output.py  text_tool_parser.py
nature/agents/: __init__.py  config.py  presets.py
nature/client/: __init__.py  http_client.py
nature/config/: __init__.py  constants.py  defaults.py  hosts.py  models.py  settings.py  types.py
paper/: README.md  abstract.en.md  abstract.ko.md  arxiv_prep.sh  experiment_plan.md  outline.md  paper.tex  paper_ko.tex
tests/: _fakes.py  conftest.py  test_admin_api.py  test_agents_config.py  test_area_manager.py  test_body_compaction.py  test_budget.py  test_context_refactor.py  test_cost.py  test_delegation.py  test_edit_guards.py  test_eval_diff.py  test_eval_judge.py  test_eval_metrics.py  test_eval_pythonpath.py  test_eval_seed_baseline.py  test_events.py  test_footer.py  test_frame.py  test_frame_dashboard.py  test_hosts.py  test_hosts_cli.py  test_llm_agent.py  test_messages.py  test_model_capabilities.py  test_models_config.py  test_pack_discovery.py  test_packs.py  test_permissions.py  test_preset_flow.py  test_presets.py  test_provider.py  test_provider_model_flow.py  test_provider_retry.py  test_read_memory.py  test_receptionist_tool_surface.py  test_retry.py  test_security.py  test_server_client.py  test_session_runner.py  (+8 more)
(+226 files in other folders)
